--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,11 +14,11 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node-version }}
-      - name: npm install, check, test
+      - name: npm ci, check, test
         run: |
-          npm install
+          npm ci
           npm run lint
-          npm audit
+          npm audit --production
           npm test
         env:
           CI: true
