--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tikuidoc-tikui",
-  "version": "1.1.0",
+  "version": "2.0.0",
   "description": "Tikui documentation",
   "main": "tikuidoc.json",
   "scripts": {
@@ -8,7 +8,8 @@
     "lint": "concurrently npm:sass:lint npm:pug:lint",
     "pug:lint": "pug-lint src && pug-lint part",
     "sass:lint": "stylelint \"src/**/*.scss\" --syntax scss",
-    "sass:lint:fix": "stylelint \"src/**/*.scss\" --syntax scss --fix"
+    "sass:lint:fix": "stylelint \"src/**/*.scss\" --syntax scss --fix",
+    "prepare": "husky install"
   },
   "repository": "github:tikui/tikuidoc-tikui",
   "author": "Anthony Rey",
@@ -21,27 +22,22 @@
     "node": ">=14.15.3",
     "npm": ">=6.14.9"
   },
-  "husky": {
-    "hooks": {
-      "pre-commit": "npm run lint"
-    }
-  },
   "devDependencies": {
-    "@types/jest": "^26.0.19",
-    "concurrently": "^5.3.0",
-    "husky": "^4.3.6",
-    "jest": "^26.6.3",
+    "@types/jest": "^27.0.2",
+    "concurrently": "^6.3.0",
+    "husky": "^7.0.2",
+    "jest": "^27.2.4",
     "pug-lint": "^2.6.0",
-    "stylelint": "^13.8.0",
+    "stylelint": "^13.13.1",
     "stylelint-config-concentric-order": "^4.0.1",
-    "stylelint-config-sass-guidelines": "^7.1.0",
+    "stylelint-config-sass-guidelines": "^8.0.0",
     "stylelint-config-scss": "^1.0.0-security",
-    "stylelint-config-standard": "^20.0.0",
-    "ts-jest": "^26.4.4",
-    "typescript": "^4.1.3"
+    "stylelint-config-standard": "^22.0.0",
+    "ts-jest": "^27.0.5",
+    "typescript": "^4.4.3"
   },
   "dependencies": {
-    "bootstrap": "^4.5.3",
-    "node": "^14.15.2"
+    "bootstrap": "^5.1.1",
+    "node": "^14.18.0"
   }
 }
