--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,22 +1,19 @@
 {
-  "plugins": [
-    "stylelint-scss"
-  ],
-  "extends": [
-    "stylelint-config-sass-guidelines",
-    "stylelint-config-concentric-order"
-  ],
+  "plugins": ["stylelint-scss"],
+  "customSyntax": "postcss-scss",
+  "extends": ["stylelint-config-standard-scss", "stylelint-config-concentric-order"],
   "rules": {
     "max-empty-lines": 1,
     "max-nesting-depth": 3,
-    "order/properties-alphabetical-order": null,
+    "string-quotes": "single",
+    "selector-class-pattern": "^-?([a-z][a-z0-9]*)(-[a-z0-9]+)*$",
+    "function-parentheses-newline-inside": "always-multi-line",
     "selector-list-comma-newline-after": "always-multi-line",
+    "no-descending-specificity": null,
     "selector-no-qualifying-type": [
       true,
       {
-        "ignore": [
-          "class"
-        ]
+        "ignore": ["class"]
       }
     ]
   }
