--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "test": "jest",
     "lint": "concurrently npm:sass:lint npm:pug:lint",
     "pug:lint": "pug-lint src && pug-lint part",
-    "sass:lint": "stylelint \"src/**/*.scss\" --syntax scss",
-    "sass:lint:fix": "stylelint \"src/**/*.scss\" --syntax scss --fix",
+    "sass:lint": "stylelint \"src/**/*.scss\"",
+    "sass:lint:fix": "stylelint \"src/**/*.scss\" --fix",
     "prepare": "husky install"
   },
   "repository": "github:tikui/tikuidoc-tikui",
@@ -23,17 +23,17 @@
     "npm": ">=6.14.9"
   },
   "devDependencies": {
-    "@types/jest": "^27.0.2",
-    "concurrently": "^6.3.0",
-    "husky": "^7.0.2",
-    "jest": "^27.2.4",
+    "@types/jest": "^29.2.5",
+    "concurrently": "^7.6.0",
+    "husky": "^8.0.3",
+    "jest": "^29.3.1",
+    "postcss-scss": "^4.0.5",
     "pug-lint": "^2.6.0",
-    "stylelint": "^13.13.1",
-    "stylelint-config-concentric-order": "^4.0.1",
-    "stylelint-config-sass-guidelines": "^8.0.0",
-    "stylelint-config-scss": "^1.0.0-security",
-    "stylelint-config-standard": "^22.0.0",
-    "ts-jest": "^27.0.5",
+    "stylelint": "^14.12.1",
+    "stylelint-config-concentric-order": "^5.1.0",
+    "stylelint-config-standard": "^29.0.0",
+    "stylelint-config-standard-scss": "^6.1.0",
+    "ts-jest": "^29.0.4",
     "typescript": "^4.4.3"
   }
 }
