--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "pug:lint": "pug-lint src && pug-lint part",
     "sass:lint": "stylelint \"src/**/*.scss\"",
     "sass:lint:fix": "stylelint \"src/**/*.scss\" --fix",
-    "prepare": "husky install",
-    "build": "tsx build.ts"
+    "build": "tsx build.ts",
+    "prepare": "husky"
   },
   "repository": "github:tikui/tikuidoc-tikui",
   "author": "Anthony Rey",
@@ -26,14 +26,13 @@
   },
   "homepage": "https://github.com/tikui/tikuidoc-tikui#readme",
   "engines": {
-    "node": ">=14.15.3",
-    "npm": ">=6.14.9"
+    "node": ">=18.0.0"
   },
   "devDependencies": {
     "@fontsource/montserrat": "^5.0.18",
     "@types/jest": "^29.2.5",
     "concurrently": "^8.0.0",
-    "husky": "^8.0.3",
+    "husky": "^9.1.1",
     "jest": "^29.3.1",
     "postcss-scss": "^4.0.5",
     "pug-lint": "^2.6.0",
