--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ name: Node CI
 on:
   push:
     tags:
-      - "*"
+      - '*'
     branches:
       - main
   pull_request:
@@ -24,11 +24,12 @@ jobs:
       - name: Use Node.js  ${{ matrix.node-version }}
         uses: actions/setup-node@v4
         with:
-          node-version:  ${{ matrix.node-version }}
+          node-version: ${{ matrix.node-version }}
       - name: node check
         run: |
           npm ci
           npm run lint
+          npm run format
           npm run build
           npm test
         env:
@@ -52,7 +53,7 @@ jobs:
           exit 1
   deploy:
     if: startsWith(github.event.ref, 'refs/tags/')
-    needs: ["status-checks"]
+    needs: ['status-checks']
     runs-on: ubuntu-latest
     continue-on-error: true
     steps:
