--- a/package.json
+++ b/package.json
@@ -30,18 +30,18 @@
     "node": ">=18.0.0"
   },
   "devDependencies": {
-    "@fontsource/montserrat": "^5.0.18",
-    "@types/jest": "^29.2.5",
-    "concurrently": "^8.0.0",
-    "husky": "^9.1.1",
-    "jest": "^29.3.1",
-    "prettier": "^3.3.3",
-    "pug-lint": "^2.6.0",
-    "stylelint": "^16.7.0",
-    "stylelint-config-concentric-order": "^5.2.0",
-    "stylelint-config-standard-scss": "^13.1.0",
-    "ts-jest": "^29.0.4",
-    "tsx": "^4.16.2",
-    "typescript": "^5.0.0"
+    "@fontsource/montserrat": "5.0.18",
+    "@types/jest": "29.5.12",
+    "concurrently": "8.2.2",
+    "husky": "9.1.1",
+    "jest": "29.7.0",
+    "prettier": "3.3.3",
+    "pug-lint": "2.7.0",
+    "stylelint": "16.7.0",
+    "stylelint-config-concentric-order": "5.2.0",
+    "stylelint-config-standard-scss": "13.1.0",
+    "ts-jest": "29.2.3",
+    "tsx": "4.16.2",
+    "typescript": "5.5.4"
   }
 }
